# SOFTWARE-ENGINEER

./: .gitignore  README.html  README.md  pyproject.toml  requirements.txt  ruff.toml  run_tests.sh  whatsapp_ecosystem.py
.github/workflows/: python-package.yml
src/software_engineer/: app.py  config.py  hello.py
tests/: test_app.py  test_cli.py  test_hello.py
